Anúncios do Adsense

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-7260170471474616">
     <link rel="icon" href="img/icon_division bg.png">
     <title>Division site</title>
     <link rel="stylesheet" href="index.css">
