--- a/html/produtos.html
+++ b/html/produtos.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Divisiøn</title>
+<link rel="icon" href="/icon.png" type="image/x-icon">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 <link rel="stylesheet" href="../css/produtos.css">
@@ -10,13 +11,16 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+  
   <header> 
     <div class="logo">
     <a href="../index.html">
-      <img src="../img/logoname.png" alt="Logo do site">
+      <img src="/logoname.png" alt="Logo do site">
     </a>
   </div>
   </header>
+  
+  
 
 
 
