--- a/html/produtos.html
+++ b/html/produtos.html
@@ -18,7 +18,13 @@
       <img src="/logoname.png" alt="Logo do site">
     </a>
   </div>
+
+  <a href="../index.html" class="back">Voltar</a>
+
+
   </header>
+
+
   
   
 
