--- a/sobre nos/index.html
+++ b/sobre nos/index.html
@@ -34,7 +34,7 @@
                 Embora ainda estejamos construindo nossa base de feedbacks, atuamos 100% online e nos diferenciamos 
                 pela nossa paixão por tecnologia e dedicação ao cliente. Nosso objetivo é expandir e continuar oferecendo soluções
                  inovadoras que importam.</h2>
-              
+                 <div class="Voltar"> <a href="/index.html"><button> Voltar</button></a></div>
             </main>
 
           <!---
